Updated margins on div.body to fix text spacing issue and button issue.

--- a/Website/frontend/assets/css/_sass/partials/_marketing-site.scss
+++ b/Website/frontend/assets/css/_sass/partials/_marketing-site.scss
@@ -221,6 +221,9 @@ article.marketingIntro {
 				text-transform: uppercase;
 			}
 		}
+		@include breakpoint(small) {
+			margin: 0 20px;
+		}
 	}
 	@each $theme in $themes {
 		&.accent-#{map-get($theme, name)} {
